# trade

./: .env.example  .gitignore  Makefile  README.md  WORKLOG.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  RECONCILER_FINDINGS.md  STATS_FINDINGS.md  pyproject.toml  sol_stats.py  stats.py
backend/app/: config.py  db.py  main.py
backend/app/api/: accounts.py  audit.py  auth.py  bot.py  dashboard.py  grids.py  logs.py  market.py  trades.py  users.py  ws.py
backend/app/core/: audit.py  bot_logger.py  crypto.py  deps.py  error_middleware.py  grid_activity_logger.py  log_translator.py  logging.py  notifier.py  redis_client.py  report_generator.py  security.py  totp.py
backend/app/models/: __init__.py  audit.py  enums.py  exchange_account.py  grid.py  mixins.py  stats.py  user.py
backend/app/schemas/: __init__.py  account.py  audit.py  auth.py  common.py  grid.py  user.py
backend/app/services/: __init__.py  grid_service.py  monitor.py  stats_collector.py  stats_query.py
backend/app/strategy/: __init__.py  base_executor.py  engine.py  executor.py  live_executor.py  paper_executor.py  reconciler.py  types.py
backend/cli/: create_superadmin.py
backend/migrations/: env.py
backend/migrations/versions/: 20260408_0001_initial_schema.py  20260514_0002_add_strategy_and_adaptive_fields.py  20260514_0003_add_bot_logs_table.py  20260517_0004_add_tick_interval_sec.py  20260517_0005_add_ultraadmin_role.py  20260525_0006_add_auto_convert_fields.py  (+5 more)
backend/tests/: conftest.py  test_accounts.py  test_audit.py  test_auth.py  test_bot.py  test_dashboard.py  test_grids.py  test_smoke.py  test_trades.py  test_users.py
backend/worker/: main.py
(+90 files in other folders)
