[project]
name = "moneybot-backend"
version = "2.0.0"
description = "Crypto grid trading bot — backend"
requires-python = ">=3.12"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "python-multipart>=0.0.12",

    # БД
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Redis
    "redis>=5.2.0",

    # Валидация / настройки
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "cryptography>=43.0.0",

    # Биржа
    "ccxt>=4.4.0",
    "aiohttp-socks>=0.9.0",

    # Логирование
    "structlog>=24.4.0",

    # Утилиты
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "psutil>=6.0.0",

    # Отчёты / графики
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-passlib",
]

[tool.setuptools.packages.find]
include = ["app*", "worker*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "F403",
    "RUF001",
    "RUF002",
    "RUF003",
    "UP042",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
